# simple-transformer

./: .gitignore  README.md  pyproject.toml
src/simple_transformer/: inference.py  train.py
src/simple_transformer/dataloaders/: shakespeare.py
src/simple_transformer/tokenizers/: base.py  character.py
src/simple_transformer/transformer/: attention.py  model.py  positional_encoding.py  transformer_block.py
