[project]
name = "my-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "James Wells", email = "jameswellsiv@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]

[project.scripts]
my-transformer = "my_transformer:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
